--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-notes.login.txt
+ai.Reference/notes.login.txt 
+ai.Reference/notes.retrainModel.txt
+ai.Reference/notes.dashborads.txt
+ai.Reference/notes.ml.txt
+ai.Reference/notes.CaseStudy.txt
